k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kackdev
spec:
  selector:
    matchLabels:
      app: kackdev
  template:
    metadata:
      labels:
        app: kackdev
    spec:
      volumes:
        - name: cert-pv-storage
          persistentVolumeClaim:
            claimName: cert-pv-claim
      containers:
      - name: kackdev
        image: gabbersepp/kackdev
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/letsencrypt/live/h5b.de
          name: cert-pv-claim
