k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kack.dev-service
spec:
  selector:
   app: kack.dev
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
