k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kack.dev-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /kackdev
          backend:
            serviceName: kack.dev-service
            servicePort: 80
